src/assets/css/barplot.css
.ac-bar-group rect {
    /*stroke-width: 1;*/
    /*stroke: #d6d6d6;*/
    shape-rendering: crispEdges;
    cursor: pointer;
}

.ac-bar-group rect:hover {

}

.ac-bar-legend-element {
    cursor: pointer;
}

.ac-bar-axis path {
    stroke: #d6d6d6;
    stroke-width: 1px;
    shape-rendering: crispEdges;
}

.ac-bar-axis {
    font-size: 1em;
}

.ac-bar-left-axis path {
    stroke: none;
}

.ac-bar-left-axis .tick line {
    stroke: none;
}

.ac-bar-right-axis path {
    stroke: none;
}

.ac-bar-right-axis .tick line {
    stroke: #d6d6d6;
    stroke-width: 1px;
    shape-rendering: crispEdges;
}

